fix(Sidebar): Behaviour on smaller screens

--- a/src/ApplicationHeader/ApplicationHeader/ApplicationHeader.css
+++ b/src/ApplicationHeader/ApplicationHeader/ApplicationHeader.css
@@ -3,7 +3,7 @@
     position: sticky;
     left: 0;
     right: 0;
-    z-index: 8;
+    z-index: 12;
     display: flex;
 }
 
