--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ html, body {
 }
 
 body {
-    background-color: #f2f2f2;
     margin: 0;
     padding: 0;
     font-size: 1rem;
